TP3/y.output
Terminals which are not used

   JSON
   YAML
   OBJECT
   COLON
   COMMA
   NULLVALUE
   BOOLEAN
   BOOLVALUE
   ARRAY
   array
   KEYVALUE


Grammar

    0 $accept: Programa $end

    1 Programa: START KeyValuePairs

    2 KeyValuePairs: KeyValuePair
    3              | KeyValuePairs KeyValuePair

    4 KeyValuePair: KEY List
    5             | KEY Object
    6             | PARAGRAPH Block
    7             | CONTENT contBlock

    8 Object: KeyValue
    9       | Object KeyValue

   10 KeyValue: OBJECTKEY Array
   11         | OBJECTKEY OBJECTVALUE

   12 Array: ARRAYKEY ARRAYVALUE
   13      | Array ARRAYKEY ARRAYVALUE

   14 List: list
   15     | List list

   16 Block: blockline
   17      | Block blockline

   18 contBlock: contLine
   19          | contBlock contLine


Terminals, with rules where they appear

$end (0) 0
error (256)
START (258) 1
JSON (259)
YAML (260)
OBJECT (261)
KEY (262) 4 5
PARAGRAPH (263) 6
CONTENT (264) 7
COLON (265)
COMMA (266)
NULLVALUE (267)
BOOLEAN (268)
BOOLVALUE (269)
ARRAY (270)
OBJECTKEY (271) 10 11
OBJECTVALUE (272) 11
ARRAYKEY (273) 12 13
ARRAYVALUE (274) 12 13
list (275) 14 15
array (276)
blockline (277) 16 17
contLine (278) 18 19
KEYVALUE (279)


Nonterminals, with rules where they appear

$accept (25)
    on left: 0
Programa (26)
    on left: 1, on right: 0
KeyValuePairs (27)
    on left: 2 3, on right: 1 3
KeyValuePair (28)
    on left: 4 5 6 7, on right: 2 3
Object (29)
    on left: 8 9, on right: 5 9
KeyValue (30)
    on left: 10 11, on right: 8 9
Array (31)
    on left: 12 13, on right: 10 13
List (32)
    on left: 14 15, on right: 4 15
Block (33)
    on left: 16 17, on right: 6 17
contBlock (34)
    on left: 18 19, on right: 7 19


state 0

    0 $accept: . Programa $end

    START  shift, and go to state 1

    Programa  go to state 2


state 1

    1 Programa: START . KeyValuePairs

    KEY        shift, and go to state 3
    PARAGRAPH  shift, and go to state 4
    CONTENT    shift, and go to state 5

    KeyValuePairs  go to state 6
    KeyValuePair   go to state 7


state 2

    0 $accept: Programa . $end

    $end  shift, and go to state 8


state 3

    4 KeyValuePair: KEY . List
    5             | KEY . Object

    OBJECTKEY  shift, and go to state 9
    list       shift, and go to state 10

    Object    go to state 11
    KeyValue  go to state 12
    List      go to state 13


state 4

    6 KeyValuePair: PARAGRAPH . Block

    blockline  shift, and go to state 14

    Block  go to state 15


state 5

    7 KeyValuePair: CONTENT . contBlock

    contLine  shift, and go to state 16

    contBlock  go to state 17


state 6

    1 Programa: START KeyValuePairs .
    3 KeyValuePairs: KeyValuePairs . KeyValuePair

    KEY        shift, and go to state 3
    PARAGRAPH  shift, and go to state 4
    CONTENT    shift, and go to state 5

    $default  reduce using rule 1 (Programa)

    KeyValuePair  go to state 18


state 7

    2 KeyValuePairs: KeyValuePair .

    $default  reduce using rule 2 (KeyValuePairs)


state 8

    0 $accept: Programa $end .

    $default  accept


state 9

   10 KeyValue: OBJECTKEY . Array
   11         | OBJECTKEY . OBJECTVALUE

    OBJECTVALUE  shift, and go to state 19
    ARRAYKEY     shift, and go to state 20

    Array  go to state 21


state 10

   14 List: list .

    $default  reduce using rule 14 (List)


state 11

    5 KeyValuePair: KEY Object .
    9 Object: Object . KeyValue

    OBJECTKEY  shift, and go to state 9

    $default  reduce using rule 5 (KeyValuePair)

    KeyValue  go to state 22


state 12

    8 Object: KeyValue .

    $default  reduce using rule 8 (Object)


state 13

    4 KeyValuePair: KEY List .
   15 List: List . list

    list  shift, and go to state 23

    $default  reduce using rule 4 (KeyValuePair)


state 14

   16 Block: blockline .

    $default  reduce using rule 16 (Block)


state 15

    6 KeyValuePair: PARAGRAPH Block .
   17 Block: Block . blockline

    blockline  shift, and go to state 24

    $default  reduce using rule 6 (KeyValuePair)


state 16

   18 contBlock: contLine .

    $default  reduce using rule 18 (contBlock)


state 17

    7 KeyValuePair: CONTENT contBlock .
   19 contBlock: contBlock . contLine

    contLine  shift, and go to state 25

    $default  reduce using rule 7 (KeyValuePair)


state 18

    3 KeyValuePairs: KeyValuePairs KeyValuePair .

    $default  reduce using rule 3 (KeyValuePairs)


state 19

   11 KeyValue: OBJECTKEY OBJECTVALUE .

    $default  reduce using rule 11 (KeyValue)


state 20

   12 Array: ARRAYKEY . ARRAYVALUE

    ARRAYVALUE  shift, and go to state 26


state 21

   10 KeyValue: OBJECTKEY Array .
   13 Array: Array . ARRAYKEY ARRAYVALUE

    ARRAYKEY  shift, and go to state 27

    $default  reduce using rule 10 (KeyValue)


state 22

    9 Object: Object KeyValue .

    $default  reduce using rule 9 (Object)


state 23

   15 List: List list .

    $default  reduce using rule 15 (List)


state 24

   17 Block: Block blockline .

    $default  reduce using rule 17 (Block)


state 25

   19 contBlock: contBlock contLine .

    $default  reduce using rule 19 (contBlock)


state 26

   12 Array: ARRAYKEY ARRAYVALUE .

    $default  reduce using rule 12 (Array)


state 27

   13 Array: Array ARRAYKEY . ARRAYVALUE

    ARRAYVALUE  shift, and go to state 28


state 28

   13 Array: Array ARRAYKEY ARRAYVALUE .

    $default  reduce using rule 13 (Array)
